--- a/files/index.html
+++ b/files/index.html
@@ -10,7 +10,8 @@
 
 <body>
     <h1>Hello World!</h1>
-    <h2>This is server {{ server_name }}!</h2>
+    <h2>{{ greeting | upper }}</h2>
+    <small>{{ ansible_date_time.date }}</small>
 </body>
 
 </html>
