--- a/files/index.html
+++ b/files/index.html
@@ -11,6 +11,7 @@
 <body>
     <h1>Hello World!</h1>
     <h2>{{ greeting | upper }}</h2>
+    <pre><code>{{ cowsay_greeting.stdout }}</code></pre>
     <small>{{ ansible_date_time.date }}</small>
 </body>
 
